--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     IstenenOyun: Oyun,
                 })
                 .then(() => {
+                    alert("Geri bildirimin için teşekkürler.")
                     location.reload()
                 })
         }
